-- uk_aq_raw schema (split from uk_air_quality_schema.sql)
create schema if not exists uk_aq_raw;
set search_path = uk_aq_raw, uk_aq_core, public;

create table if not exists uk_air_sos_site_register (
  id bigint generated by default as identity primary key,
  uk_air_id text not null,
  eu_site_id text,
  emep_site_id text,
  site_name text,
  environment_type text,
  zone text,
  start_date date,
  end_date date,
  latitude double precision,
  longitude double precision,
  northing double precision,
  easting double precision,
  altitude_m double precision,
  networks text[] not null default '{}'::text[],
  aurn_pollutants_measured text,
  site_description text,
  source_url text,
  source_file text,
  snapshot_at timestamptz not null default now(),
  raw_payload jsonb not null default '{}'::jsonb,
  created_at timestamptz default now()
);

create index if not exists uk_air_sos_site_register_uk_air_id_idx
  on uk_air_sos_site_register(uk_air_id);
create index if not exists uk_air_sos_site_register_snapshot_idx
  on uk_air_sos_site_register(snapshot_at);
create index if not exists uk_air_sos_site_register_networks_gin_idx
  on uk_air_sos_site_register using gin (networks);
create unique index if not exists uk_air_sos_site_register_snapshot_uidx
  on uk_air_sos_site_register(uk_air_id, snapshot_at);

create table if not exists laqn_site_register (
  id bigint generated by default as identity primary key,
  site_ref text not null,
  label text,
  station_name text,
  station_type text,
  station_exposure text,
  local_authority text,
  network_label text,
  networks text[] not null default '{}'::text[],
  latitude double precision,
  longitude double precision,
  lat_offset double precision,
  lon_offset double precision,
  site_url text,
  first_seen_at timestamptz,
  last_seen_at timestamptz,
  removed_at timestamptz,
  source_url text,
  source_file text,
  snapshot_at timestamptz not null default now(),
  raw_payload jsonb not null default '{}'::jsonb,
  created_at timestamptz default now()
);

create index if not exists laqn_site_register_site_ref_idx
  on laqn_site_register(site_ref);
create index if not exists laqn_site_register_snapshot_idx
  on laqn_site_register(snapshot_at);
create index if not exists laqn_site_register_networks_gin_idx
  on laqn_site_register using gin (networks);
create unique index if not exists laqn_site_register_snapshot_uidx
  on laqn_site_register(site_ref, snapshot_at);

create table if not exists uk_air_sos_station_refs (
  station_id bigint primary key references stations(id) on delete cascade,
  uk_air_id text not null,
  match_method text,
  match_distance_m double precision,
  source_snapshot_at timestamptz,
  created_at timestamptz default now(),
  updated_at timestamptz default now()
);

create index if not exists uk_air_sos_station_refs_uk_air_id_idx
  on uk_air_sos_station_refs(uk_air_id);
create index if not exists uk_air_sos_station_refs_snapshot_idx
  on uk_air_sos_station_refs(source_snapshot_at);

create table if not exists breathelondon_timeseries_checkpoints (
  station_id bigint not null references stations(id) on delete cascade,
  species text not null,
  timeseries_id bigint references timeseries(id) on delete set null,
  last_observed_at timestamptz,
  last_fetch_at timestamptz,
  last_error text,
  created_at timestamptz default now(),
  updated_at timestamptz default now(),
  primary key (station_id, species)
);

create index if not exists breathelondon_timeseries_checkpoints_last_obs_idx
  on breathelondon_timeseries_checkpoints(last_observed_at);

create table if not exists erg_laqn_station_checkpoints (
  station_id bigint primary key references stations(id) on delete cascade,
  last_polled_at timestamptz,
  created_at timestamptz default now(),
  updated_at timestamptz default now()
);

create index if not exists erg_laqn_station_checkpoints_last_polled_idx
  on erg_laqn_station_checkpoints(last_polled_at);

create table if not exists uk_air_sos_timeseries_checkpoints (
  timeseries_id bigint primary key references timeseries(id) on delete cascade,
  last_polled_at timestamptz not null,
  updated_at timestamptz not null default now()
);

create index if not exists uk_air_sos_timeseries_checkpoints_last_polled_at_idx
  on uk_air_sos_timeseries_checkpoints(last_polled_at);

create table if not exists openaq_station_checkpoints (
  station_id bigint primary key references stations(id) on delete cascade,
  next_due_at timestamptz,
  last_observed_at timestamptz,
  observ_interval_samples int[] not null default '{}'::int[],
  ingest_lag_samples int[] not null default '{}'::int[],
  last_polled_at timestamptz,
  created_at timestamptz default now(),
  updated_at timestamptz default now()
);

create index if not exists openaq_station_checkpoints_next_due_at_idx
  on openaq_station_checkpoints(next_due_at);
create index if not exists openaq_station_checkpoints_last_polled_at_idx
  on openaq_station_checkpoints(last_polled_at);

create unique index if not exists stations_connector_ref_uidx
  on stations(connector_id, service_ref, station_ref);
create index if not exists stations_geom_idx on stations using gist (geometry);
create index if not exists stations_geom_cast_idx on stations using gist ((geometry::geometry));
create index if not exists stations_la_code_idx on stations(la_code);
create index if not exists stations_la_version_idx on stations(la_version);
create index if not exists stations_pcon_code_idx on stations(pcon_code);
create index if not exists stations_pcon_version_idx on stations(pcon_version);
create index if not exists stations_pcon_code_null_idx
  on stations(id)
  where pcon_code is null;

-- Local Authority boundaries (used to persist station LA codes)

create table if not exists error_logs (
  id uuid default gen_random_uuid() primary key,
  created_at timestamptz default now(),
  source text not null,
  severity text not null,
  message text not null,
  stack text,
  context jsonb,
  connector_id bigint references connectors(id) on delete set null,
  station_id bigint references stations(id) on delete set null,
  timeseries_id bigint references timeseries(id) on delete set null,
  dropbox_path text
);
create index if not exists error_logs_created_at_idx on error_logs(created_at desc);
create index if not exists error_logs_source_idx on error_logs(source);
create index if not exists error_logs_connector_idx on error_logs(connector_id);

-- PM2.5 Population Exposure Indicator progress (PERT)
